gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test22541.d
version https://git-lfs.github.com/spec/v1
oid sha256:e487886590b2160f8f7f7b4f55197fd430c554de30313a8ee34f23d15a255c75
size 382
